--- a/Ilpodio.html
+++ b/Ilpodio.html
@@ -63,13 +63,13 @@
 
 				<div class="container">
 					<label for="type"><b>Rolle</b></label>
-					<select required id="type" class="contact-text-input" name="type" onchange="changeLogin()">
+					<select required id="typeLogin" class="contact-text-input" name="type" onchange="changeLogin()">
 						<option value="0">Rolle auswählen</option>
 						<option value="1">Administrator</option>
 						<option value="2">Restaurantbesitzer</option>
 					</select>
-					<label id="namelabel" for="usernameinput"><b>Benutzername</b></label>
-					<input id="username" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
+					<label id="namelabelLogin" for="usernameinput"><b>Benutzername</b></label>
+					<input id="usernameLogin" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
 						required>
 					<br>
 					<label id="pwlabel" for="passwordinput"><b>Passwort</b></label>
@@ -82,35 +82,35 @@
 			</form>
 		</div>
         
-    <div class="jumbotron text-center" id="jumbotronilpodio">
-        <div id="titletext">
-            <h1>Il Podio</h1>
-            <p>Reservieren Sie Ihren Tisch im Il Podio Ravensburg - gleich
-                hier!</p>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>Kategorien</h3>
-                <p>Ristorante, Pizzeria, italienisch</p>
-            </div>
-            <div class="col-sm-4">
-                <h3>Was?</h3>
-                <p>In unserem neuen Restaurant "Il Podio" in Ravensburg servieren wir Ihnen Antipasti, Pasta, Pizza und Desserts in einem entspannenden italienischen Ambiente.</p>
-            </div>
-            <div class="col-sm-4">
-                <h3>Wo?</h3>
-                <p>Marienplatz 16-18</p>
-                <p>88212 Ravensburg</p>
-            </div>
-        </div>
-    </div>
-    <div class="container" id="reserve">
-            <form action="/backend/addreservation.php" method="POST">
-                <h2 align="center">Reservierung bei Il Podio Ravensburg</h2>
-                <input name="restaurant" hidden value="Il Podio">
-                <div class="row">
+		<div class="jumbotron text-center" id="jumbotronilpodio">
+			<div id="titletext">
+				<h1>Il Podio</h1>
+				<p>Reservieren Sie Ihren Tisch im Il Podio Ravensburg - gleich
+					hier!</p>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<h3>Kategorien</h3>
+					<p>Ristorante, Pizzeria, italienisch</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Was?</h3>
+					<p>In unserem neuen Restaurant "Il Podio" in Ravensburg servieren wir Ihnen Antipasti, Pasta, Pizza und Desserts in einem entspannenden italienischen Ambiente.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Wo?</h3>
+					<p>Marienplatz 16-18</p>
+					<p>88212 Ravensburg</p>
+				</div>
+			</div>
+		</div>
+		<div class="container" id="reserve">
+			<form action="/backend/addreservation.php" method="POST">
+				<h2 align="center">Reservierung bei Il Podio Ravensburg</h2>
+				<input name="restaurant" hidden value="Il Podio">
+				<div class="row">
 					<div class="col-sm-4" align="center">
 						<h3>Datum auswählen:</h3>
 						<img src="https://img.icons8.com/metro/26/000000/calendar.png">
