--- a/gleis9.html
+++ b/gleis9.html
@@ -63,13 +63,13 @@
 
 				<div class="container">
 					<label for="type"><b>Rolle</b></label>
-					<select required id="type" class="contact-text-input" name="type" onchange="changeLogin()">
+					<select required id="typeLogin" class="contact-text-input" name="type" onchange="changeLogin()">
 						<option value="0">Rolle auswählen</option>
 						<option value="1">Administrator</option>
 						<option value="2">Restaurantbesitzer</option>
 					</select>
-					<label id="namelabel" for="usernameinput"><b>Benutzername</b></label>
-					<input id="username" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
+					<label id="namelabelLogin" for="usernameinput"><b>Benutzername</b></label>
+					<input id="usernameLogin" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
 						required>
 					<br>
 					<label id="pwlabel" for="passwordinput"><b>Passwort</b></label>
