--- a/contact.html
+++ b/contact.html
@@ -83,13 +83,10 @@
 
 		<div class="jumbotron text-center" id="jumbotronqmuh">
 			<div id="titletext">
-				<h1>QMUH Ravensburg</h1>
-				<p>Egal ob Kunde oder Restaurantbesitzer, hier können Sie uns
-					kontaktieren!</p>
+				<h1>Kontaktformular</h1>
 			</div>
 		</div>
 		<div class="container-contact">
-			<h2 align="center">Kontaktformular</h2>
 			<div class="select">
 				<select id="type" class="contact-text-input" name="type" onchange="changeFields()" required>
 					<option value="0">Rolle auswählen</option>
