--- a/restaurantsRV.html
+++ b/restaurantsRV.html
@@ -145,5 +145,40 @@
         </div>
     </header>
 </body>
+<footer class="footer-distributed">
+	<div class="footer-left">
+		<h3>
+			<span>Restaurando</span>
+		</h3>
+		<p class="footer-links">
+			<a href="index.html" class="link-1">Home</a> <a href="restaurants.html">Restaurants</a> <a
+				href="contact.html">Kontakt</a>
+		</p>
+		<p class="footer-company-name">Restaurando © 2019</p>
+	</div>
+	<div class="footer-center">
+		<div>
+			<i class="fa fa-map-marker"></i>
+			<p>
+				<span>Georgstraße 13</span> Ravensburg, Deutschland
+			</p>
+		</div>
+		<div>
+			<i class="fa fa-phone"></i>
+			<p>+49 1575 444444</p>
+		</div>
+		<div>
+			<i class="fa fa-envelope"></i>
+			<p>
+				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
+			</p>
+		</div>
+	</div>
+	<div class="footer-right">
+		<p class="footer-company-about">
+			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
+		</p>
+	</div>
+</footer>
 
 </html>
