Login-Dropdown entfernt --> sinnlos

--- a/index.html
+++ b/index.html
@@ -63,13 +63,7 @@
 				</div>
 
 				<div class="container">
-					<label for="type"><b>Rolle</b></label>
-					<select required id="typeLogin" class="contact-text-input" name="type" onchange="changeLogin()">
-						<option value="0">Rolle auswählen</option>
-						<option value="1">Administrator</option>
-						<option value="2">Restaurantbesitzer</option>
-					</select>
-					<label id="namelabelLogin" for="usernameinput"><b>Benutzername</b></label>
+					<label id="namelabelLogin" for="usernameinput"><b>Restaurantnameme</b></label>
 					<input id="usernameLogin" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
 						required>
 					<br>
