--- a/restaurantsULM.html
+++ b/restaurantsULM.html
@@ -63,23 +63,17 @@
                 </div>
 
                 <div class="container">
-                    <label for="type"><b>Rolle</b></label>
-                    <select required id="typeLogin" class="contact-text-input" name="type" onchange="changeLogin()">
-                        <option value="0">Rolle auswählen</option>
-                        <option value="1">Administrator</option>
-                        <option value="2">Restaurantbesitzer</option>
-                    </select>
-                    <label id="namelabelLogin" for="usernameinput"><b>Benutzername</b></label>
-                    <input id="usernameLogin" type="text" placeholder="Name eingeben" name="usernameinput"
-                        maxlength="50" required>
-                    <br>
-                    <label id="pwlabel" for="passwordinput"><b>Passwort</b></label>
-                    <input id="pw" type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30"
-                        required>
-                    <br>
-                    <button type="submit">Login</button>
-                    <script src="/resources/js/login.js"></script>
-                </div>
+					<label id="namelabelLogin" for="usernameinput"><b>Restaurantname</b></label>
+					<input id="usernameLogin" type="text" placeholder="Name eingeben" name="usernameinput" maxlength="50"
+						required>
+					<br>
+					<label id="pwlabel" for="passwordinput"><b>Passwort</b></label>
+					<input id="pw" type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30"
+						required>
+					<br>
+					<button type="submit">Login</button>
+					<script src="/resources/js/login.js"></script>
+				</div>
             </form>
         </div>
 
